Refactor..